tests/bonsai/error/import_cycle1.bonsai
import tests/bonsai/error/import_cycle0;

func bar() -> i32 {
    return 0;
}
